<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dv_ros2_capture</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="victor.mittermair@tuwien.ac.at">Victor Mittermair</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>dv_ros2_msgs</depend>
  <depend>dv_ros2_messaging</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
