<?xml version="1.0"?>
<package format="3">
  <name>dv_ros2_msgs</name>
  <version>0.0.0</version>
  <description>The dv_ros2_msgs package contains messages types from dv-processing library for event camera data publishing.</description>
  <maintainer email="victor.mittermair@tuwien.ac.at">Victor Mittermair</maintainer>
  <license>Apache2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
